# aup3conv

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: build-and-release.yml  build.yml  release-to-pypi.yml
data/: test.sqlite3
python/aup3conv/: __init__.py  aup3conv.pyi
src/: dd.rs  decoder.rs  fieldtype.rs  grapefruit.rs  lib.rs  main.rs  project.rs  structure.rs  tagstack.rs  utils.rs
src/audacity/: audio.rs  decoder.rs  fields.rs  projectdoc.rs  tagdict.rs
tests/: project.rs  projectdoc.rs  projeect.rs  tag.rs  test_bindings.py
