[project]
name = "aup3conv"
description = "Scrape Audacity project files"
python-requires = ">=3.11"
dynamic = ["version"]
readme = "README.md"
keywords = ["audio", "analysis", "audacity", "parsing"]

[authors]
name = "Michael Blaß"
email = "m.blass@uke.de"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[urls]
repository = "https://github.com/UKEIAM/aup3conv"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
